tests/suite/snapshots/suite__parse__tests__parse__arrays-with-dims.xi.snap
---
source: tests/suite/parse.rs
assertion_line: 22
expression: Snapshot(program)
---
(()
((foo
        ()
        ()
        ((a ([] int))
            (b ([] ([] int 3) 2))
            (c ([] int ([] a 0)))
            (d ([] ([] bool ([] "test" (bar))) (bar)))))
    (bar () (int) ((return 1)))))
