tests/suite/snapshots/suite__parse__tests__parse__arrays_1.xi.snap
---
source: tests/suite/parse.rs
expression: Snapshot(program)
---
(()
((foo
        ()
        ()
        ((= (x ([] int)) (1 2))
            (= (h int) ([] x 0))
            (= (i int) ([] (1 2) 'c'))))))
