tests/suite/snapshots/suite__parse__tests__parse__bad-array-arg.xi.snap
---
source: tests/suite/parse.rs
assertion_line: 22
expression: Snapshot(program)
---
1:5 error:Illegal length in array type
