tests/suite/snapshots/suite__parse__tests__parse__bad-array-dim-assign1.xi.snap
---
source: tests/suite/parse.rs
assertion_line: 22
expression: Snapshot(program)
---
3:14 error:Invalid array initialization
